--- a/model/Generate Training Data.ipynb
+++ b/model/Generate Training Data.ipynb
@@ -1171,7 +1171,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.4 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1185,7 +1185,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "570feb405e2e27c949193ac68f46852414290d515b0ba6e5d90d076ed2284471"
+   }
   }
  },
  "nbformat": 4,
